# MXStatus

./: .gitignore  Dockerfile  Makefile  README.md  create-runner-script  docker-compose.yml  pyproject.toml  requirements.txt
client/: INSTALL.md  config.json  data_model.py  helpers.py  installer  main.py
server/: README.md  auth.py  data_model.py  database.py  main.py
src/: Dockerfile
src/client/: data_model.py  installer  main.py  requirements.txt
src/common/: data_model.py
src/server/: data_model.py  database.py  main.py
tests/: test_dev.py
