[project]
name = "mxstatus"
version = "0.1.0"
description = "MXStatus is a comprehensive system for monitoring the system status of multiple Linux machines from a centralized server."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.103.0",
    "psutil>=5.8.0",
    "puts==0.0.11",
    "pydantic==2.3.0",
    "requests==2.31.0",
    "uvicorn==0.23.2",
]
